[package]
name = "logging-subscriber"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Crugnola <alessandro.crugnola@gmail.com>"]
description = "simple logging subscriber which can be silenced"
license = "MIT"
homepage = "https://github.com/sephiroth74/logging-subscriber"
repository = "https://github.com/sephiroth74/logging-subscriber"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
time = "0.3.31"
log = "0.4.20"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
once_cell = "1.19.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
console = "0.15.7"
palette = "0.7.3"
termbg = "0.4.4"
terminal-light = "1.1.1"
