[package]
name = "logging-subscriber"
version = "0.1.4"
edition = "2021"
authors = ["Alessandro Crugnola <alessandro.crugnola@gmail.com>"]
description = "simple logging subscriber which can be silenced"
license = "MIT"
homepage = "https://github.com/sephiroth74/logging-subscriber"
repository = "https://github.com/sephiroth74/logging-subscriber"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41"
log = "0.4.25"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
lazy_static = "1.5.0"
chrono = "0.4.39"
console = "0.15.10"
termbg = "0.6.2"
terminal-light = "1.7.0"
